@@ -6,6 +6,7 @@ import lh.wordtree.dao.WorkPlanMapper;
 import lh.wordtree.dao.impl.WorkPlanMapperImpl;
 import lh.wordtree.entity.Author;
 import lh.wordtree.entity.RecentFiles;
+import lh.wordtree.entity.WorkPlan;
 import lh.wordtree.service.factory.FactoryBeanService;
 import lh.wordtree.service.record.WorkSpaceService;
 
@@ -14,7 +15,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.stream.Collectors;
 
-public class BookRackViewModel {
+public class UserInfoViewModel {
     // 获取当前的用户信息
     private final SimpleObjectProperty<Author> user = FactoryBeanService.user;
     private final List<RecentFiles> recentFiles = WorkSpaceService.get();
@@ -41,13 +42,13 @@ public class BookRackViewModel {
         // 获取当前的年份
         var nowYear = LocalDateTime.now().getYear();
         var data = new HashMap<String, Integer>();
-        workPlan.stream().filter(work -> {
+        List<WorkPlan> collect = workPlan.stream().filter(work -> {
             var time = work.getId();
             var year = time.split("-")[0];
             return Integer.parseInt(year) == nowYear;
         }).peek(work -> {
             data.put(work.getId(), work.getNumber());
-        }).collect(Collectors.toList());
+        }).toList();
         return data;
     }
 }
